--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
 
 	<title>Musab Hassan — Web Developer</title>
 
-	<link rel='icon' type='image/png' href='/favicon.ico'>
-	<link rel='stylesheet' href='/global.css'>
-	<link rel='stylesheet' href='/build/bundle.css'>
+	<link rel='icon' type='image/png' href='./favicon.ico'>
+	<link rel='stylesheet' href='./global.css'>
+	<link rel='stylesheet' href='./build/bundle.css'>
 
 	<!-- Font imports in global.css  -->
 
@@ -29,7 +29,7 @@
 	<meta http-equiv="content-type" content="text/html" charset="UTF-8">
 	<meta name="description" content="Portfolio and personal website of Musab Hassan, a web developer from British Columbia, Canada.">
 
-	<script defer src='/build/bundle.js'></script>
+	<script defer src='./build/bundle.js'></script>
 </head>
 
 <body>
