--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>React App</title><script defer="defer" src="/static/js/main.2ee8d213.js"></script><link href="/static/css/main.073c9b0a.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<title>Musab Hassan — Web Developer</title>
+
+	<link rel='icon' type='image/png' href='./favicon.ico'>
+	<link rel='stylesheet' href='./global.css'>
+	<link rel='stylesheet' href='./build/bundle.css'>
+
+	<!-- Font imports in global.css  -->
+
+	<!-- Google Analytics -->
+	<script defer src="https://www.googletagmanager.com/gtag/js?id=G-7XXPE0DV47"></script>
+	<script lang="text/javascript"">
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-7XXPE0DV47');
+	</script>
+
+	<!-- SEO -->
+	<meta name="keywords" content="Musab, Hassan, Musab Hassan, Portfolio, Web Developer, Designer, Website, Developer, Kelowna, Canada, British Columbia, Okanagan, Freelance">
+	<meta name="author" content="Musab Hassan">
+	<meta http-equiv="content-type" content="text/html" charset="UTF-8">
+	<meta name="description" content="Portfolio and personal website of Musab Hassan, a web developer from British Columbia, Canada.">
+
+	<script defer src='./build/bundle.js'></script>
+</head>
+
+<body>
+</body>
+</html>
