--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Musab Hassan — Web Developer</title>
+	<title>raavann.me</title>
 
 	<link rel='icon' type='image/png' href='./favicon.ico'>
 	<link rel='stylesheet' href='./global.css'>
 	<link rel='stylesheet' href='./build/bundle.css'>
+
+	<!-- ICONS -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+
 
 	<!-- Font imports in global.css  -->
 
@@ -24,10 +28,10 @@
 	</script>
 
 	<!-- SEO -->
-	<meta name="keywords" content="Musab, Hassan, Musab Hassan, Portfolio, Web Developer, Designer, Website, Developer, Kelowna, Canada, British Columbia, Okanagan, Freelance">
-	<meta name="author" content="Musab Hassan">
+	<meta name="keywords" content="Anurudh, Mhatre, Anurudh Mhatre, raavann, Portfolio, Web Developer, Designer, Website, Developer, India, Indore, Student, IETDAVV, IET">
+	<meta name="author" content="raavann">
 	<meta http-equiv="content-type" content="text/html" charset="UTF-8">
-	<meta name="description" content="Portfolio and personal website of Musab Hassan, a web developer from British Columbia, Canada.">
+	<meta name="description" content="Portfolio and personal website of raavann, a web developer from India.">
 
 	<script defer src='./build/bundle.js'></script>
 </head>
